# Brigh

./: .brigh.json  .gitignore  LICENSE  NOTES.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
src/brigh/: __init__.py  cli.py  detectors.py  generator.py  scanner.py
tests/: test_cli.py  test_phase1.py
