[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brigh"
version = "0.1.0"
description = "The essence of your codebase, understood."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "404Bros LTD" },
]
keywords = [
    "ai",
    "context",
    "claude",
    "cursor",
    "copilot",
    "developer-tools",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/404bros/brigh"
Repository = "https://github.com/404bros/brigh"
Issues = "https://github.com/404bros/brigh/issues"

[project.scripts]
brigh = "brigh.cli:main"
